# market-making

./: .gitignore  Cargo.toml  README.md
examples/: depth_book.rs  quick_dev.rs
src/: lib.rs  main.rs  order_book_state.rs  recent_trades.rs
src/binance/: mod.rs
src/binance/data/: depth_update.rs  kline.rs  mod.rs  price.rs  ticker.rs  trade.rs
src/market_maker/: mod.rs
