[package]
name = "market_making"
version = "0.1.0"
edition = "2024"

[lib]
name = "marketmakerlib"
path = "src/lib.rs"


[[bin]]
name = "market-maker-bin"
path = "src/main.rs"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.96"
binance_spot_connector_rust = { version = "1.3.0", features = [
    "enable-hyper",
    "enable-tokio-tungstenite",
] }
chrono = { version = "0.4.39", features = ["serde"] }
dashmap = "6.1.0"
env_logger = "0.11.6"
futures-util = "0.3.31"
rust_decimal = { version = "1.36.0", features = [
    "maths",
    "serde",
    "serde-with-str",
] }
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls", "native-tls"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
